[project]
name = "agent-sanitizer"
version = "0.1.0"
description = "Sanitize AI agent logs for safe dataset sharing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Zen AI", email = "hello@zenlm.org"}
]
keywords = ["ai", "agents", "dataset", "privacy", "sanitization", "claude", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
    "tqdm>=4.65.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/zenlm/agent-sanitizer"
Documentation = "https://github.com/zenlm/agent-sanitizer#readme"
Repository = "https://github.com/zenlm/agent-sanitizer"
Issues = "https://github.com/zenlm/agent-sanitizer/issues"

[project.scripts]
agent-sanitizer = "agent_sanitizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_sanitizer"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
